fix cloud overlap

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,5 +1,5 @@
 .navbar {
-  z-index: 2;
+  z-index: 3;
   justify-content: space-between;
   background: white;
 }
